# Calc

./: Devops.md  README.md
src/: Makefile
src/controller/: controller.cc  controller.h
src/model/: credit_calc.cc  credit_calc.h  smart_calc.cc  smart_calc.h  string_validation.cc  string_validation.h
src/model/tests/: calc_model_tests.cc  credit_calc_tests.cc
src/view/: CMakeLists.txt  creditwindow.cc  creditwindow.h  creditwindow.ui  graphwindow.cc  graphwindow.h  graphwindow.ui  mainwindow.cc  mainwindow.h  mainwindow.ui
